--- a/src/common/styles/mixin.styl
+++ b/src/common/styles/mixin.styl
@@ -1,3 +1,9 @@
+$1 = 1
+$2 = 2
+$3 = 3
+$4 = 4
+$5 = 5
+
 bg-image($url)
   background url($url + '@2x.png')
   @media (-webkit-min-device-pixel-radio: 3),(min-device-pixel-radio: 3)
