--- a/src/common/styles/mixin.styl
+++ b/src/common/styles/mixin.styl
@@ -4,6 +4,8 @@ $3 = 3
 $4 = 4
 $5 = 5
 
+$cartColor = rgba(255,255,255,.4)
+
 bg-image($url)
   background url($url + '@2x.png')
   @media (-webkit-min-device-pixel-radio: 3),(min-device-pixel-radio: 3)
