--- a/src/common/styles/mixin.styl
+++ b/src/common/styles/mixin.styl
@@ -22,3 +22,13 @@ absolute()
   right 0
   bottom 0
   top 0
+
+title()
+  font-size .24rem
+  color rgb(7,17,27)
+  line-height .36rem
+
+score()
+  font-size .24rem
+  color rgb(255,153,0)
+  line-height .36rem
